--- a/blog/templates/blog/post/share.html
+++ b/blog/templates/blog/post/share.html
@@ -1,5 +1,7 @@
 {% extends "blog/base.html" %}
+
 {% block title %}Share a post{% endblock %}
+
 {% block content %}
   {% if sent %}
     <h1>E-mail successfully sent</h1>
@@ -8,7 +10,7 @@
     </p>
   {% else %}
     <h1>Share "{{ post.title }}" by e-mail</h1>
-    <form method="post">
+    <form method="post" novalidate>
       {{ form.as_p }}
       {% csrf_token %}
       <input type="submit" value="Send e-mail">
